Bug 61507 - broken export of title (metadata) to RTF format
Summary: broken export of title (metadata) to RTF format
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:4.1.0 target:4.0.2
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-26 12:33 UTC by Andras Timar
Modified: 2014-08-01 13:23 UTC (History)
0 users

See Also:
Crash report or crash signature:
Regression By:


Attachments
export to RTF, see ÉÜÍÓÁ in Wordpad (28.16 KB, application/vnd.oasis.opendocument.text)
2013-02-26 12:33 UTC, Andras Timar
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andras Timar 2013-02-26 12:33:23 UTC
Created attachment 75572 [details]
export to RTF, see ÉÜÍÓÁ in Wordpad

When the title (metadata) contains non-ASCII characters, and the document is exported to RTF format from Writer, and it is opened in Wordpad, the non-ASCII characters from title appear in the document body.
Comment 1 Urmas 2013-02-26 13:23:03 UTC
The error is caused by a Unicode title string outside the {\upr{...}{\*\ud{\title XXX}}} construction.
Comment 2 Not Assigned 2013-02-26 14:43:46 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0805b222f87bf99ec0c53ca678d1c670eb5293a2

fdo#61507 import RTF_UPR and RTF_UD



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Not Assigned 2013-02-26 17:08:39 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5de52551a963b932cc23c2ea75f709fa1924520b

fdo#61507 export of RTF_TITLE may need RTF_UPR and RTF_UD



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Miklos Vajna 2013-02-27 10:27:05 UTC
4-0 review: https://gerrit.libreoffice.org/2436
Comment 5 Not Assigned 2013-02-28 15:15:48 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3209bc81245452ef6976c77818186b05c3026438&h=libreoffice-4-0

fdo#61507 import/export RTF_UPR and RTF_UD


It will be available in LibreOffice 4.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.