fdo#61507 import RTF_UPR and RTF_UD

It turns out Word wraps document title with these destinations if they
contain something that isn't possible to describe using legacy charsets.

Change-Id: Ic9417d0f23d44149acb3ae3dc9d4c281058a1b36